# prompt-evaluator

./: .env.example  .flow-toolkit.json  .gitignore  CHANGELOG.md  CLAUDE.md  MARKETING.md  README.md  SPECIFICATIONS.md  docker-compose.e2e.yml  docker-compose.override.yml  docker-compose.yml
.github/workflows/: ci.yml
deploy/: Dockerfile  Dockerfile.dockerignore
eval-runner/: .dockerignore  CLAUDE.md  Dockerfile  pyproject.toml  requirements.txt
eval-runner/app/: execution.py  generation.py  judging.py  main.py  providers.py
eval-runner/tests/: test_config.py  test_execution.py  test_generation.py  test_judging.py  test_main.py  test_providers.py  test_providers_endpoint.py  test_service_token.py
infra/: .gitignore  README.md  main.tf  outputs.tf  variables.tf  versions.tf
samples/: README.md  prompts.json
smoke/: README.md  seed-smoke.sh
specs/: 0.1.md  0.2.md  1.1.md  1.10.md  1.11.md  1.12.md  1.13.md  1.14.md  1.15.md  1.16.md  1.17.md  1.18.md  1.2.md  1.20.md  1.21.md  1.3.md  1.4.md  1.5.md  1.6.md  1.7.md  1.8.md  1.9.md  2.1.md  2.10.md  2.11.md  2.12.md  2.13.md  2.14.md  2.15.md  2.16.md  2.17.md  2.18.md  2.19.md  2.2.md  2.20.md  2.21.md  2.22.md  2.23.md  2.3.md  2.4.md  (+18 more)
specs/5.1/: 5.1.T1.md  5.1.T2.md  5.1.T3.md  5.1.T4.md  5.1.md  catalog.md  findings.md  runbook.md
specs/6.1/: 6.1.T1.md  6.1.T2.md  6.1.T3.md  6.1.T4.md  6.1.md  (+2 more)
src/: CLAUDE.md  Directory.Build.props  PromptEvaluator.slnx
web/: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  angular.json  nginx.conf  package-lock.json  package.json  playwright.config.ts
(+480 files in other folders)
