[project]
name = "eval-runner"
version = "0.3.0"
description = "LitmusAI eval-runner: LLM-judge scoring + synthetic fixture generation"
requires-python = ">=3.12"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
