[project]
name = "eval-runner"
# Placeholder only — the service is not packaged/published. The runtime app version is
# git-tag-derived and surfaced by GET /version (APP_VERSION env). Do not treat this as the source.
version = "0.0.0"
description = "LitmusAI eval-runner: LLM-judge scoring + synthetic fixture generation"
requires-python = ">=3.12"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
